# cl-gml

./: Makefile.am  configure.ac
defs/: operators.def  pp.h  token.h  types.def
demo/: tetrahedron.gml
kernel/: gml.cl  ps.cl  stack_adder.cl
src/: gml.cpp  gml.hpp  main.cpp  parse.l
test/: check_stack.cpp  check_stack.hpp  flow.cpp  math.cpp  types.cpp
